# Visual-SARIMAX-Streamlit

./: README.md  app.py  environment.yml  plots.py  pyproject.toml  requirements.txt  utils.py
datasets/: Icecream.csv
tests/: test_more.py  test_utils.py
visual_sarimax/: __init__.py  app.py  plots.py  utils.py
visual_sarimax/datasets/: AirPassengers.csv
